[package]
name = "ytm-discord"
version = "0.1.0"
authors = ["Drewol <emildraws@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rpc-client = "^0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
tungstenite = "0.11.1"